--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,32 @@
 .App {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-gap: 10px;
-  margin: 20px;
+  grid-gap: 3rem;
+  grid-template-areas:
+    "header ratings"
+    "reviews reviews";
+  width: 80%;
+  height: 100vh;
+  margin: 0 auto;
+  align-content: center;
 }
 
-.box {
-  padding: 20px;
-  border-radius: 3px;
-  background-color: blue;
-  color: white;
-  font-size: 150%;
+.Header {
+  text-align: left;
+  grid-area: header;
+  text-align: left;
 }
 
-.Reviews {
-  grid-area: 2 / 1 / 3 / 3;
+.Header h1 {
+  color: var(--very-dark-magenta);
+  font-size: 2.4rem;
+  font-weight: 700;
+  line-height: 1;
+  margin-bottom: 1rem;
+}
+
+.Header p {
+  color: var(--dark-grayish-magenta);
+  font-size: 14px;
+  line-height: 1.6;
 }
